Update charm directory for v7.0.0

--- a/.github/workflows/changa.yml
+++ b/.github/workflows/changa.yml
@@ -10,16 +10,16 @@ jobs:
     - uses: actions/checkout@v2
     - name: build-charm++
       run: |
-        export CHARM_VERSION=charm-7.0.0
-        wget http://charm.cs.illinois.edu/distrib/$CHARM_VERSION.tar.gz
-        tar -xzf $CHARM_VERSION.tar.gz
-        cd $CHARM_VERSION
+        export CHARM_VERSION=7.0.0
+        wget http://charm.cs.illinois.edu/distrib/charm-$CHARM_VERSION.tar.gz
+        tar -xzf charm-$CHARM_VERSION.tar.gz
+        cd charm-v$CHARM_VERSION
         ./build ChaNGa netlrts-linux-x86_64 smp --with-production --enable-error-checking -j4
         cd ..
     - name: build-changa
       run: |
         git clone https://github.com/N-bodyshop/utility
-        export CHARM_DIR=$PWD/$CHARM_VERSION
+        export CHARM_DIR=$PWD/charm-v$CHARM_VERSION
         ./configure
         make -j4
     - name: test-changa
