Update testcollapse script to python3

--- a/testcollapse/Makefile
+++ b/testcollapse/Makefile
@@ -6,7 +6,7 @@ cha.prof: adiabtophat_glass_28768_Std.000030
 	tipsy -nodisp < tipsy.mac
 
 adiabtophat_glass_28768_Std.000030:
-	../charmrun +p 2 ../ChaNGa adiabtophat_glass_28768_Std.param
+	../charmrun ++local +p 2 ../ChaNGa adiabtophat_glass_28768_Std.param
 
 clean:
 	rm -rf cha.prof adiabtophat_glass_28768_Std.000030 *.chk?  .tipsy_history
