--- a/Makefile.in
+++ b/Makefile.in
@@ -124,7 +124,7 @@ defines := $(strip @HEXADECAPOLE@ @FLAG_GDFORCE@ @FLAG_ARCH@  \
           @FLAG_SPH_KERNEL@ @FLAG_COOLING@ @FLAG_DIFFUSION@   \
           @FLAG_FEEDBACKDIFFLIMIT@ @FLAG_CULLENALPHA@         \
           @FLAG_VSIGVISC@ @FLAG_DAMPING@ @FLAG_DIFFHARMONIC@  \
-          @FLAG_JEANSSOFTONLY@ @FLAG_FLOAT@ \
+          @FLAG_JEANSSOFTONLY@ @FLAG_FLOAT@ @FLAG_COLLISION@ \
           @FLAG_TREE_BUILD@ $(debug_defines) @FLAG_INTERLIST@ \
           @FLAG_NSMOOTHINNER@ @FLAG_SPLITGAS@ @FLAG_SIDMINTERACT@ \
           @FLAG_SUPERBUBBLE@ $(cuda_defines) -DREDUCTION_HELPER)
