cooling_metal_H2 code used on host and device

--- a/Makefile.in
+++ b/Makefile.in
@@ -167,9 +167,13 @@ endif
 ifeq (-DCOOLING_METAL,@FLAG_COOLING@)
 	c_srcs += $(source_dir)/cooling_metal.c
 endif
+
+ifeq (no,@ENABLE_CUDA@)
 ifeq (-DCOOLING_MOLECULARH,@FLAG_COOLING@)
 	c_srcs += $(source_dir)/cooling_metal_H2.c
 endif
+endif
+
 ifeq (-DCOOLING_GRACKLE,@FLAG_COOLING@)
   c_srcs += $(source_dir)/cooling_grackle.c
 endif
@@ -182,6 +186,12 @@ ci_headers := $(patsubst %.ci,%.decl.h,$(subst $(source_dir),$(build_dir),$(ci_f
 c_objs   := $(patsubst %.c,%.o,$(subst $(source_dir),$(build_dir),$(c_srcs)))
 cxx_objs := $(patsubst %.cpp,%.o,$(subst $(source_dir),$(build_dir),$(cxx_srcs)))
 objects  := $(strip $(cxx_objs) $(c_objs) $(cuda_objs))
+
+ifeq (yes,@ENABLE_CUDA@)
+ifeq (-DCOOLING_MOLECULARH,@FLAG_COOLING@)
+	objects += $(build_dir)/cuda_link.o
+endif
+endif
 
 # ------- Dependencies --------------------------------------------------------
 depend_flags  := -MMD -MP -MF
