--- a/Makefile.in
+++ b/Makefile.in
@@ -164,8 +164,11 @@ endif
 ifeq (-DCOOLING_BOLEY,@FLAG_COOLING@)
 	c_srcs += $(source_dir)/cooling_boley.c
 endif
+
+ifeq (no,@ENABLE_CUDA@)
 ifeq (-DCOOLING_METAL,@FLAG_COOLING@)
 	c_srcs += $(source_dir)/cooling_metal.c
+endif
 endif
 
 ifeq (no,@ENABLE_CUDA@)
@@ -188,7 +191,7 @@ cxx_objs := $(patsubst %.cpp,%.o,$(subst $(source_dir),$(build_dir),$(cxx_srcs))
 objects  := $(strip $(cxx_objs) $(c_objs) $(cuda_objs))
 
 ifeq (yes,@ENABLE_CUDA@)
-ifeq (-DCOOLING_MOLECULARH,@FLAG_COOLING@)
+ifeq ($(or @FLAG_COOLING@,-DCOOLING_MOLECULARH,-DCOOLING_METAL),1)
 	objects += $(build_dir)/cuda_link.o
 endif
 endif
