--- a/cuda.mk.in
+++ b/cuda.mk.in
@@ -50,6 +50,11 @@ ifeq (-DCOOLING_MOLECULARH,@FLAG_COOLING@)
 	use_dc_flag := -dc
 endif
 
+ifeq (-DCOOLING_METAL,@FLAG_COOLING@)
+	cuda_srcs += $(source_dir)/cooling_metal.cu
+	use_dc_flag := -dc
+endif
+
 cuda_libs     := @CUDA_LIBS@
 cuda_ldflags  += -L@CUDA_DIR@/lib64
 cuda_objs     := $(patsubst %.cu,%.o,$(subst $(source_dir),$(build_dir),$(cuda_srcs)))
@@ -93,7 +98,7 @@ $(build_dir)/%.o: $(source_dir)/%.cu
 	@ echo Compiling $<...
 	$(quiet) /usr/local/cuda-12.5/bin/nvcc -std=$(cxx_std) -Xcompiler "$(cxx_flags) $(depend_flags) $(depend_dir)/$*$(depend_suffix)" $(nvcc_flags) $(use_dc_flag) -c $< -o $@
 
-ifeq (-DCOOLING_MOLECULARH,@FLAG_COOLING@)
+ifeq ($(or @FLAG_COOLING@,-DCOOLING_MOLECULARH,-DCOOLING_METAL),1)
 $(build_dir)/cuda_link.o: $(cuda_objs)
 	@ echo Linking cuda object files...
 	$(quiet) /usr/local/cuda-12.5/bin/nvcc -std=$(cxx_std) -Xcompiler "$(cxx_flags) $(depend_flags) $(depend_dir)/$*$(depend_suffix)" $(nvcc_flags) --device-link $(cuda_objs) --output-file $@
