cooling_boley on GPU

--- a/Makefile.in
+++ b/Makefile.in
@@ -168,7 +168,11 @@ endif
 endif
 
 ifeq (-DCOOLING_BOLEY,@FLAG_COOLING@)
+ifeq (yes,@ENABLE_CUDA@)
+  cuda_link := 1
+else
 	c_srcs += $(source_dir)/cooling_boley.c
+endif
 endif
 
 ifeq (-DCOOLING_METAL,@FLAG_COOLING@)
