--- a/Makefile.in
+++ b/Makefile.in
@@ -126,7 +126,7 @@ defines := $(strip @HEXADECAPOLE@ @FLAG_GDFORCE@ @FLAG_ARCH@  \
           @FLAG_JEANSSOFTONLY@ @FLAG_FLOAT@ \
           @FLAG_TREE_BUILD@ $(debug_defines) @FLAG_INTERLIST@ \
           @FLAG_NSMOOTHINNER@ @FLAG_SPLITGAS@ @FLAG_SIDMINTERACT@ \
-          @FLAG_SUPERBUBBLE@ $(cuda_defines) -DREDUCTION_HELPER)
+          @FLAG_SUPERBUBBLE@ @FLAG_SHIELDSF@ $(cuda_defines) -DREDUCTION_HELPER)
 
 modules := $(strip -language charm++ -balancer @DEFAULT_LB@   \
             $(foreach m,$(charm_modules),-module $(m))        \
